Perkin-UAT/force-app/main/default/objects/SMAX_PS_InventoryCount__c/SMAX_PS_InventoryCount__c.object-meta.xml
<CustomObject>
    <label>Inventory Count</label>
    <nameField>
        <displayFormat>INVC-{00000000}</displayFormat>
        <label>Inventory Count Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Inventory Counts</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>