Perkin-UAT/force-app/main/default/objects/SMAX_PS_InventoryCount__c/fields/BD_Platform_Event_Log__c.field-meta.xml
<CustomField>
    <fullName>BD_Platform_Event_Log__c</fullName>
    <formula>HYPERLINK(&quot;/apex/SMAX_PS_PlatformEventLog?RelatedID=&quot; &amp; Id &amp; &quot;&amp;RelatedName=&quot; &amp; Name, &quot;View&quot;)</formula>
    <label>Platform Event Log</label>
    <type>Text</type>
</CustomField>