Perkin-UAT/force-app/main/default/objects/SMAX_PS_InventoryCount__c/fields/BD_Service_Manager__c.field-meta.xml
<CustomField>
    <fullName>BD_Service_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Service Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Inventory_Counts_Manager</relationshipName>
    <type>Lookup</type>
</CustomField>