Perkin-UAT/force-app/main/default/objects/SMAX_PS_InventoryCount__c/fields/BD_Service_Manager_Equals_Current_User__c.field-meta.xml
<CustomField>
    <fullName>BD_Service_Manager_Equals_Current_User__c</fullName>
    <description>Check if the Service Manager field matches the Current User that is logged in.</description>
    <formula>IF(BD_Service_Manager__c = $User.Id, true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Service Manager Equals Current User</label>
    <type>Checkbox</type>
</CustomField>