Perkin-UAT/force-app/main/default/objects/SMAX_PS_InventoryCount__c/fields/SMAX_PS_Counted_Qty_Total__c.field-meta.xml
<CustomField>
    <fullName>SMAX_PS_Counted_Qty_Total__c</fullName>
    <description>Sum of the Counted Qty Inventory Count Lines</description>
    <label>Counted Qty Total</label>
    <summarizedField>SMAX_PS_InventoryCountLine__c.SMAX_PS_CountedQty__c</summarizedField>
    <summaryForeignKey>SMAX_PS_InventoryCountLine__c.SMAX_PS_InventoryCount__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>