Perkin-UAT/force-app/main/default/objects/SMAX_PS_InventoryCount__c/fields/SMAX_PS_Difference_Value_Total__c.field-meta.xml
<CustomField>
    <fullName>SMAX_PS_Difference_Value_Total__c</fullName>
    <description>Placeholder field used by the Inventory Count Approval functionality</description>
    <label>Difference Value Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>