Perkin-UAT/force-app/main/default/objects/SMAX_PS_InventoryCount__c/fields/SMAX_PS_DocumentDate__c.field-meta.xml
<CustomField>
    <fullName>SMAX_PS_DocumentDate__c</fullName>
    <label>Document Date</label>
    <type>Date</type>
</CustomField>