Perkin-UAT/force-app/main/default/objects/SMAX_PS_InventoryCount__c/fields/SMAX_PS_Is_Found_Item_True_Count__c.field-meta.xml
<CustomField>
    <fullName>SMAX_PS_Is_Found_Item_True_Count__c</fullName>
    <description>Count of Inventory Count Lines where Is Found Item field is TRUE. Used in Work Flow Email Alert</description>
    <inlineHelpText>Count of Inventory Count Lines where Is Found Item field is TRUE. Used in Work Flow Email Alert</inlineHelpText>
    <label>Is Found Item True Count</label>
    <summaryFilterItems>
        <field>SMAX_PS_InventoryCountLine__c.SMAX_PS_Found_Item__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>SMAX_PS_InventoryCountLine__c.SMAX_PS_InventoryCount__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>