Perkin-UAT/force-app/main/default/objects/SMAX_PS_InventoryCount__c/fields/SMAX_PS_Is_Found_Item_True_Qty__c.field-meta.xml
<CustomField>
    <fullName>SMAX_PS_Is_Found_Item_True_Qty__c</fullName>
    <description>Sum of the SMAX_PS_EntryQty__c for Lines that have Is Found Item = true</description>
    <label>Is Found Item True Qty</label>
    <summarizedField>SMAX_PS_InventoryCountLine__c.SMAX_PS_EntryQty__c</summarizedField>
    <summaryFilterItems>
        <field>SMAX_PS_InventoryCountLine__c.SMAX_PS_Found_Item__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>SMAX_PS_InventoryCountLine__c.SMAX_PS_InventoryCount__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>