Perkin-UAT/force-app/main/default/objects/SMAX_PS_InventoryCount__c/fields/SMAX_PS_Lines_Count__c.field-meta.xml
<CustomField>
    <fullName>SMAX_PS_Lines_Count__c</fullName>
    <description>Count of the Inventory Count Lines</description>
    <label>Lines Count</label>
    <summaryForeignKey>SMAX_PS_InventoryCountLine__c.SMAX_PS_InventoryCount__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>