Perkin-UAT/force-app/main/default/objects/SMAX_PS_InventoryCount__c/fields/SMAX_PS_Maintenance_Plant__c.field-meta.xml
<CustomField>
    <fullName>SMAX_PS_Maintenance_Plant__c</fullName>
    <formula>SMAX_PS_RequestedFrom__r.SMAX_PS_MaintenancePlant__c</formula>
    <label>Maintenance Plant</label>
    <type>Text</type>
</CustomField>