Perkin-UAT/force-app/main/default/objects/SMAX_PS_InventoryCount__c/fields/SMAX_PS_PlannedDate__c.field-meta.xml
<CustomField>
    <fullName>SMAX_PS_PlannedDate__c</fullName>
    <label>Planned Date</label>
    <type>Date</type>
</CustomField>