Perkin-UAT/force-app/main/default/objects/SMAX_PS_InventoryCount__c/fields/SMAX_PS_Recount_Required__c.field-meta.xml
<CustomField>
    <fullName>SMAX_PS_Recount_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Denotes that there is a recount required for the inventory count</description>
    <inlineHelpText>Denotes that there is a recount required for the inventory count</inlineHelpText>
    <label>Recount Required</label>
    <type>Checkbox</type>
</CustomField>