Perkin-UAT/force-app/main/default/objects/SMAX_PS_InventoryCount__c/fields/SMAX_PS_RequestedFrom__c.field-meta.xml
<CustomField>
    <fullName>SMAX_PS_RequestedFrom__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Requested From</label>
    <referenceTo>SVMXC__Site__c</referenceTo>
    <relationshipLabel>Inventory Counts</relationshipLabel>
    <relationshipName>Inventory_Counts</relationshipName>
    <type>Lookup</type>
</CustomField>