Perkin-UAT/force-app/main/default/objects/SMAX_PS_InventoryCount__c/fields/SMAX_PS_Service_Engineer__c.field-meta.xml
<CustomField>
    <fullName>SMAX_PS_Service_Engineer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Service Engineer</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Inventory_Counts</relationshipName>
    <type>Lookup</type>
</CustomField>