Perkin-UAT/force-app/main/default/objects/SMAX_PS_InventoryCount__c/fields/SMAX_PS_Special_Stock_Indicator__c.field-meta.xml
<CustomField>
    <fullName>SMAX_PS_Special_Stock_Indicator__c</fullName>
    <description>Denotes a list of special stock indicators</description>
    <inlineHelpText>Denotes a list of special stock indicators</inlineHelpText>
    <label>Special Stock Indicator</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>E Orders on hand</fullName>
            </value>
            <value>
                <fullName>K Consignment (vendor)</fullName>
            </value>
            <value>
                <fullName>M Ret.trans.pkg vendor</fullName>
            </value>
            <value>
                <fullName>O Parts prov. vendor</fullName>
            </value>
            <value>
                <fullName>P Pipeline material</fullName>
            </value>
            <value>
                <fullName>Q Project stock</fullName>
            </value>
            <value>
                <fullName>V Ret. pkg w. customer</fullName>
            </value>
            <value>
                <fullName>W Consignment (cust.)</fullName>
            </value>
            <value>
                <fullName>Y Shipping unit (whse)</fullName>
            </value>
            <value>
                <fullName>&quot;E Orders on hand</fullName>
                <isActive>false</isActive>
                <label>&quot;E Orders on hand</label>
            </value>
            <value>
                <fullName>Y Shipping unit (whse)&quot;</fullName>
                <isActive>false</isActive>
                <label>Y Shipping unit (whse)&quot;</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>