Perkin-UAT/force-app/main/default/objects/SMAX_PS_InventoryCount__c/fields/SMAX_PS_Status__c.field-meta.xml
<CustomField>
    <fullName>SMAX_PS_Status__c</fullName>
    <description>Added &quot;Approved&quot; which triggers Integration to SAP</description>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Open</fullName>
            </value>
            <value>
                <fullName>Submitted</fullName>
            </value>
            <value>
                <fullName>Recount Required</fullName>
            </value>
            <value>
                <fullName>Confirmed</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
                <isActive>false</isActive>
                <label>Completed</label>
            </value>
            <value>
                <fullName>Tech Complete</fullName>
                <isActive>false</isActive>
                <label>Tech Complete</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>