Perkin-UAT/force-app/main/default/objects/SMAX_PS_InventoryCount__c/fields/SMAX_PS_Technician__c.field-meta.xml
<CustomField>
    <fullName>SMAX_PS_Technician__c</fullName>
    <description>Shows the Preferred Technician from a location denoted as Stocking Location</description>
    <formula>SMAX_PS_RequestedTechnician__r.Name</formula>
    <inlineHelpText>Shows the Preferred Technician from a location denoted as Stocking Location</inlineHelpText>
    <label>Technician</label>
    <type>Text</type>
</CustomField>