Perkin-UAT/force-app/main/default/objects/SMAX_PS_InventoryCount__c/fields/SMAX_PS_Year__c.field-meta.xml
<CustomField>
    <fullName>SMAX_PS_Year__c</fullName>
    <label>Year</label>
    <length>4</length>
    <type>Text</type>
</CustomField>