Perkin-UAT/force-app/main/default/objects/SMAX_PS_InventoryCount__c/validationRules/SMAX_PS_Lock_on_Approved.validationRule-meta.xml
<ValidationRule>
    <fullName>SMAX_PS_Lock_on_Approved</fullName>
    <active>false</active>
    <errorConditionFormula>$Permission.BD_Bypass_Automation != TRUE
&amp;&amp; ISPICKVAL(PRIORVALUE(SMAX_PS_Status__c ), &quot;Approved&quot; )</errorConditionFormula>
    <errorMessage>Inventory Count is locked and can no longer be edited.</errorMessage>
</ValidationRule>