Perkin-UAT/force-app/main/default/objects/SMAX_PS_InventoryCount__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>SMAX_PS_Status__c</columns>
    <columns>SMAX_PS_Technician__c</columns>
    <columns>SMAX_PS_PlannedDate__c</columns>
    <columns>SMAX_PS_IsBlockedForPosting__c</columns>
    <columns>SMAX_PS_Recount_Required__c</columns>
    <columns>SMAX_PS_RequestedFrom__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>