Perkin-UAT/force-app/main/default/objects/SMAX_PS_InventoryCount__c/listViews/BD_My_Inventory_Counts.listView-meta.xml
<ListView>
    <fullName>BD_My_Inventory_Counts</fullName>
    <columns>NAME</columns>
    <columns>SMAX_PS_Status__c</columns>
    <columns>SMAX_PS_DocumentDate__c</columns>
    <columns>SMAX_PS_PlannedDate__c</columns>
    <columns>SMAX_PS_Count_Date__c</columns>
    <columns>SMAX_PS_Lines_Count__c</columns>
    <columns>SMAX_PS_Counted_Qty_Total__c</columns>
    <filterScope>Mine</filterScope>
    <label>My Inventory Counts</label>
</ListView>